[package]
name = "ztl"
version = "1.0.1"
authors = ["Gris Ge <fge@redhat.com>"]
license = "Apache-2.0"
edition = "2018"
description = "Command line tool for Zatel"
homepage = "https://github.com/cathay4t/zatel"
repository = "https://github.com/cathay4t/zatel"
keywords = ["network"]
categories = ["network-programming", "os"]

[[bin]]
name = "ztl"
path = "ztl.rs"

[dependencies]
serde = "1.0"
zatel = {path = "../lib"}
tokio = { version = "1.3", features = ["rt", "net", "io-util"]}
