[package]
name = "zatel"
version = "1.0.1"
authors = ["Gris Ge <fge@redhat.com>"]
license = "Apache-2.0"
edition = "2018"
description = "Network Manager"
homepage = "https://github.com/cathay4t/zatel"
repository = "https://github.com/cathay4t/zatel"
keywords = ["network"]
categories = ["network-programming", "os"]

[lib]
name = "zatel"
path = "lib.rs"
crate-type = ["lib"]

[dependencies]
serde = {version = "1.0", features = ["derive"]}
serde_yaml = "0.8.17"
tokio = { version = "1.3", features = ["rt", "net", "io-util", "macros", "rt-multi-thread"]}
